fixing poetry editing on mobile

--- a/client/src/components/builder-components/styles/AddComponentSelector.css
+++ b/client/src/components/builder-components/styles/AddComponentSelector.css
@@ -1,6 +1,7 @@
 .selector-container {
   height: 40px;
-  margin: 60px 0 100px 0;
+  margin: 60px 0 0 0;
+  padding-bottom: 100px;
 }
 
 .selector-container .reacting-link {
